# gep-perf-package

./: .gitignore  README.md  make_plots.sh  pyproject.toml  run.sh  runplots.sh
configs/: ele_example.yaml  ele_example_sig3.yaml  ele_example_sig4.yaml  jet_example.yaml  jet_example_sig3.yaml  jet_example_sig4.yaml  jet_tthad_example.yaml  jet_tthad_example_sig3.yaml  jet_tthad_example_sig4.yaml  met_example.yaml  met_example_sig3.yaml  met_example_sig4.yaml  pho_example.yaml  pho_example_sig3.yaml  pho_example_sig4.yaml  tau_example.yaml  tau_example_sig3.yaml  tau_example_sig4.yaml
src/gep_perf/: __init__.py  cli.py  config.py  core.py
src/gep_perf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
